--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>4.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
